--- a/src/static_in_pro/our_static/css/main.css
+++ b/src/static_in_pro/our_static/css/main.css
@@ -186,7 +186,7 @@ iframe {
   height: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(255,255,255,0.9);
+  background-color: rgba(255,255,255,0.5);
 }
 
 .wrap-login100 {
@@ -196,10 +196,10 @@ iframe {
   padding: 55px 55px 37px 55px;
 
   background: #9152f8;
-  background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-  background: -o-linear-gradient(top, #7579ff, #b224ef);
-  background: -moz-linear-gradient(top, #7579ff, #b224ef);
-  background: linear-gradient(top, #7579ff, #b224ef);
+  background: -webkit-linear-gradient(top, #7593ff, #efb624a8);
+  background: -o-linear-gradient(top, #7593ff, #efb624a8);
+  background: -moz-linear-gradient(top, #7593ff, #efb624a8);
+  background: linear-gradient(top, #7593ff, #efb624a8);
 }
 
 
