--- a/src/templates/check.html
+++ b/src/templates/check.html
@@ -46,6 +46,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 		<div class="w3-row-padding">
 			<!-- Left Column -->
 			<div class="w3-third">
+				<h3>Registered Users</h3>
 				<table>
 					<tr>
 						<th>Username</th>
@@ -60,13 +61,30 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 					</tr>
 					{% endfor %}
 				</table>
+				<div class="pagination">
+				    <span class="step-links">
+				        {% if users.has_previous %}
+				            <a href="?page={{ users.previous_page_number }}" class="previous">&laquo; Previous</a>
+				        {% endif %}
+
+				        <span class="current">
+				            Page {{ users.number }} of {{ users.paginator.num_pages }}
+				        </span>
+
+				        {% if users.has_next %}
+				            <a href="?page={{ users.next_page_number }}" class="next">Next &raquo;</a>
+				        {% endif %}
+				    </span>
+				</div>
+
+
 				<!-- End Left Column -->
 			</div>
-
 			<div class="w3-twothird">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-0" style="padding: 50px;">
+							<!-- <h1>Maximum of 3 users can chat</h1> -->
 							<div id="otEmbedContainer" style="width:750px; height:640px"></div><script src={{src|safe}}></script>
 						</div>
 					</div>
