--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>My Website</title>
+    <title>VideoChat</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -25,7 +25,8 @@
         <!-- Menu Items -->
         <div class="collapse navbar-collapse" id="mainNavBar">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="{% url 'login'%}">Home</a></li>
+                <li class="active"><a href="{% url 'login'%}">HomeRoom</a></li>
+                <li><a href="{% url 'show_data'%}" >Instructions</a></li>
                 <li><a href="{% url 'logout'%}" >Logout</a></li>
                 <!-- <li><a href="#">Contact</a></li> -->
             </ul>
