--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -30,10 +30,10 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 <!--===============================================================================================-->
 </head>
-<body>
+<body style="background-color: #999999;">
 	
 	<div class="limiter">
-		<div class="container-login100" style="background-image: url('../static/images/bg-01.jpg');">
+		<div class="container-login100" style="background-image: url('../static/images/video.jpg');">
 			<div class="wrap-login100">
 				<form class="login100-form validate-form" method = "POST" action = "">{%csrf_token%}
 					<span class="login100-form-logo">
