--- a/src/templates/registration.html
+++ b/src/templates/registration.html
@@ -33,15 +33,13 @@
 <body>
 	
 	<div class="limiter">
-		<div class="container-login100" style="background-image: url('../static/images/bg-01.jpg');">
+	<div class="container-login100" style="background-image: url('../static/images/bg-01.jpg');">
 			<div class="wrap-login100">
 				<!-- <form class="login100-form validate-form"> -->
 				<div class="container">
 						<div class="row">
 							<div class="col-md-12 col-md-offset-10" style="padding: 40px;">
-								<span class="login100-form-logo">
-									<i class="zmdi zmdi-landscape"></i>
-								</span>
+								
 								<span class="login100-form-title p-b-34 p-t-27">
 									SIGN UP
 								</span>
@@ -64,12 +62,8 @@
 							</div>
 						</form>
 							<div class="text-center p-t-20">
-								<a class="txt1" href="">
-									Forgot Password?
-								</a>
-								<br>
 								<a class="txt1" href="{%url 'login'%}">
-									Already have a Account ? Log in here
+									<h6>Already have a Account ? Log in here</h6>
 								</a>
 							</div>
 						</div>
