--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -2,82 +2,24 @@
 {% load staticfiles %}
 {%load crispy_forms_tags%}
 
-<head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12 col-md-offset-3" style="padding: 50px;">
+			<h1><i>Steps to make a Video Call</i></h1>
+			<h2>Let us assume Peer P1 wants to call Peer P2</h2><h5>(Does not support Safari Browsers,So use Mozilla Firefox Browser)</h5>
+			<h3>Peer P1</h3>
+			<h4><li>Register and login to your account.</li></h4>
+			<h4><li>Select the user from the list whom you want to call and click the call button.</li></h4>
+			<h4><li>Now click the "Click to Start Video Chat" button.</li></h4>
+			<h3>Peer P2</h3>
+			<h4><li>The selected user should login to his account and open his HomeRoom.</li></h4>
+			<h4><li>Now click the "Click to Start Video Chat" button.</li></h4>
+			<h3>Maximum of 3 users can join the ChatRoom.</h3>
+			<h4><li>Third peer should also call the selcted user and click the </li></h4>
+			<h4>  "Click to Start Video Chat" button to join Peer P1 and P2.</h4>
+		</div>
+	</div>
+</div>
 
-<style>
-table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-}
 
-td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-}
-
-tr:nth-child(even) {
-    background-color: #dddddd;
-}
-</style>
-</head>
-<body>
-
-<h2>BOOKS DATA</h2>
-
-<table>
-	<tr>
-    	<th>Title</th>
-    	<th>Authors</th>
-    	<th>Add Book</th>
-    	<th>Delete Book</th>
-  	</tr>
-	{%for x in book%}
-		<tr>
-			<th>{{x.Title}}</th> 
-			<th>{{x.Authors}}</th>
-			<th><input type="button" onclick="AddToCart({{x.id}})" name="submit" value="Add to cart" class="btn btn-success"></th>
-			<th>
-				<button class="btn btn-success" onclick="deleteFromCart({{x.id}})" value="Delete">X 
-				</button>
-			</th>
-		</tr>
-	{% endfor %}
-</table>
-</body>
-
-<script type="text/javascript">
-
-	var AddToCart=function($Book_id) {
-			// if( confirm('Do you want Delete this Author')){
-				$.get("/add-to-cart/"+$Book_id)
-				.done(
-					function(data) {
-						console.log(data);
-						// alert(data)
-						//toastr.info(data)
-						
-					}
-					);
-			// }
-		};
-
-		var deleteFromCart=function($id) {
-			if( confirm('Do you want remove book from cart?')){
-				$.get("/delete-book-from-cart/"+$id)
-				.done(
-					function(data) {
-						// console.log(data);
-						$('#cartviewId').html(data);
-						// toastr.info("Book has been removed from cart!")
-						$().toastmessage('showSuccessToast', "Author is deleted!.");
-					}
-					);
-			}
-		};
-		
-</script>
 {% include 'footer.html' %}
